refactor pricing plans