@@ -1,6 +1,7 @@
 package io.gsp26se16.moni.payment.service.impl;
 
-import io.gsp26se16.moni.payment.dto.request.PackagePricingRequest;
+import io.gsp26se16.moni.payment.dto.request.PackagePricingCreateRequest;
+import io.gsp26se16.moni.payment.dto.request.PackagePricingUpdateRequest;
 import io.gsp26se16.moni.payment.dto.response.PackagePricingResponse;
 import io.gsp26se16.moni.payment.entity.PackagePricing;
 import io.gsp26se16.moni.payment.repository.PackagePricingRepository;
@@ -20,19 +21,66 @@ public class PackagePricingImpl implements PackagePricingService {
     private final PackagePricingRepository packagePricingRepository;
 
     @Override
-    public List<PackagePricingResponse> getAllPackagePricings() {
-        log.info("Fetching all package pricings");
-        return packagePricingRepository.findAll().stream()
+    public List<PackagePricingResponse> searchPackagePricings(String name, Integer minPrice, Integer maxPrice, Integer minCreditAmount, Integer maxCreditAmount, Boolean isActive, String sortBy, String sortDir) {
+        log.info("Searching package pricings with filters: name={}, minPrice={}, maxPrice={}, minCreditAmount={}, maxCreditAmount={}, isActive={}, sortBy={}, sortDir={}", 
+                name, minPrice, maxPrice, minCreditAmount, maxCreditAmount, isActive, sortBy, sortDir);
+        
+        List<PackagePricingResponse> pricings = packagePricingRepository.findAll().stream()
                 .map(this::convertToResponse)
-                .collect(Collectors.toList());
-    }
-
-    @Override
-    public List<PackagePricingResponse> getActivePackagePricings() {
-        log.info("Fetching active package pricings");
-        return packagePricingRepository.findByIsActive(true).stream()
-                .map(this::convertToResponse)
-                .collect(Collectors.toList());
+                .toList();
+        
+        // Apply filters
+        if (name != null) {
+            pricings = pricings.stream()
+                    .filter(p -> p.name().toLowerCase().contains(name.toLowerCase()))
+                    .toList();
+        }
+        if (minPrice != null) {
+            pricings = pricings.stream()
+                    .filter(p -> p.price() >= minPrice)
+                    .toList();
+        }
+        if (maxPrice != null) {
+            pricings = pricings.stream()
+                    .filter(p -> p.price() <= maxPrice)
+                    .toList();
+        }
+        if (minCreditAmount != null) {
+            pricings = pricings.stream()
+                    .filter(p -> p.creditAmount() >= minCreditAmount)
+                    .toList();
+        }
+        if (maxCreditAmount != null) {
+            pricings = pricings.stream()
+                    .filter(p -> p.creditAmount() <= maxCreditAmount)
+                    .toList();
+        }
+        if (isActive != null) {
+            pricings = pricings.stream()
+                    .filter(p -> p.isActive().equals(isActive))
+                    .toList();
+        }
+        
+        // Apply sorting
+        pricings = switch (sortBy.toLowerCase()) {
+            case "name" -> sortDir.equalsIgnoreCase("desc") 
+                    ? pricings.stream().sorted((a, b) -> b.name().compareToIgnoreCase(a.name())).toList()
+                    : pricings.stream().sorted((a, b) -> a.name().compareToIgnoreCase(b.name())).toList();
+            case "price" -> sortDir.equalsIgnoreCase("desc")
+                    ? pricings.stream().sorted((a, b) -> b.price().compareTo(a.price())).toList()
+                    : pricings.stream().sorted((a, b) -> a.price().compareTo(b.price())).toList();
+            case "creditamount" -> sortDir.equalsIgnoreCase("desc")
+                    ? pricings.stream().sorted((a, b) -> b.creditAmount().compareTo(a.creditAmount())).toList()
+                    : pricings.stream().sorted((a, b) -> a.creditAmount().compareTo(b.creditAmount())).toList();
+            case "isactive" -> sortDir.equalsIgnoreCase("desc")
+                    ? pricings.stream().sorted((a, b) -> b.isActive().compareTo(a.isActive())).toList()
+                    : pricings.stream().sorted((a, b) -> a.isActive().compareTo(b.isActive())).toList();
+            default -> sortDir.equalsIgnoreCase("desc")
+                    ? pricings.stream().sorted((a, b) -> b.id().compareTo(a.id())).toList()
+                    : pricings.stream().sorted((a, b) -> a.id().compareTo(b.id())).toList();
+        };
+        
+        return pricings;
     }
 
     @Override
@@ -44,19 +92,19 @@ public class PackagePricingImpl implements PackagePricingService {
     }
 
     @Override
-    public PackagePricingResponse createPackagePricing(PackagePricingRequest request) {
-        log.info("Creating new package pricing with name: {}", request.getName());
+    public PackagePricingResponse createPackagePricing(PackagePricingCreateRequest request) {
+        log.info("Creating new package pricing with name: {}", request.name());
         
-        if (packagePricingRepository.existsByName(request.getName())) {
-            throw new RuntimeException("Package pricing already exists with name: " + request.getName());
+        if (packagePricingRepository.existsByName(request.name())) {
+            throw new RuntimeException("Package pricing already exists with name: " + request.name());
         }
 
         PackagePricing packagePricing = new PackagePricing();
         packagePricing.setId(null); // Let database generate the ID
-        packagePricing.setName(request.getName());
-        packagePricing.setPrice(request.getPrice());
-        packagePricing.setCreditAmount(request.getCreditAmount());
-        packagePricing.setActive(request.getIsActive() != null ? request.getIsActive() : true);
+        packagePricing.setName(request.name());
+        packagePricing.setPrice(request.price());
+        packagePricing.setCreditAmount(request.creditAmount());
+        packagePricing.setActive(true); // Default to active
 
         PackagePricing savedPackagePricing = packagePricingRepository.save(packagePricing);
         log.info("Successfully created package pricing with id: {}", savedPackagePricing.getId());
@@ -65,22 +113,22 @@ public class PackagePricingImpl implements PackagePricingService {
     }
 
     @Override
-    public PackagePricingResponse updatePackagePricing(Integer id, PackagePricingRequest request) {
+    public PackagePricingResponse updatePackagePricing(Integer id, PackagePricingUpdateRequest request) {
         log.info("Updating package pricing with id: {}", id);
         
         PackagePricing packagePricing = packagePricingRepository.findById(id)
                 .orElseThrow(() -> new RuntimeException("Package pricing not found with id: " + id));
 
-        if (!packagePricing.getName().equals(request.getName()) && 
-            packagePricingRepository.existsByName(request.getName())) {
-            throw new RuntimeException("Package pricing already exists with name: " + request.getName());
+        if (!packagePricing.getName().equals(request.name()) && 
+            packagePricingRepository.existsByName(request.name())) {
+            throw new RuntimeException("Package pricing already exists with name: " + request.name());
         }
 
-        packagePricing.setName(request.getName());
-        packagePricing.setPrice(request.getPrice());
-        packagePricing.setCreditAmount(request.getCreditAmount());
-        if (request.getIsActive() != null) {
-            packagePricing.setActive(request.getIsActive());
+        packagePricing.setName(request.name());
+        packagePricing.setPrice(request.price());
+        packagePricing.setCreditAmount(request.creditAmount());
+        if (request.isActive() != null) {
+            packagePricing.setActive(request.isActive());
         }
 
         PackagePricing updatedPackagePricing = packagePricingRepository.save(packagePricing);
@@ -99,85 +147,6 @@ public class PackagePricingImpl implements PackagePricingService {
         
         packagePricingRepository.deleteById(id);
         log.info("Successfully deleted package pricing with id: {}", id);
-    }
-
-    @Override
-    public List<PackagePricingResponse> getPackagePricingsWithFilters(String name, Integer minPrice, Integer maxPrice, Integer minCreditAmount, Integer maxCreditAmount, Boolean isActive, String sortBy, String sortDir) {
-        log.info("Fetching package pricings with filters: name={}, minPrice={}, maxPrice={}, minCreditAmount={}, maxCreditAmount={}, isActive={}, sortBy={}, sortDir={}", 
-                name, minPrice, maxPrice, minCreditAmount, maxCreditAmount, isActive, sortBy, sortDir);
-        
-        List<PackagePricingResponse> pricings = packagePricingRepository.findAll().stream()
-                .map(this::convertToResponse)
-                .toList();
-        
-        // Apply filters
-        if (name != null) {
-            pricings = pricings.stream()
-                    .filter(p -> p.getName().toLowerCase().contains(name.toLowerCase()))
-                    .toList();
-        }
-        if (minPrice != null) {
-            pricings = pricings.stream()
-                    .filter(p -> p.getPrice() >= minPrice)
-                    .toList();
-        }
-        if (maxPrice != null) {
-            pricings = pricings.stream()
-                    .filter(p -> p.getPrice() <= maxPrice)
-                    .toList();
-        }
-        if (minCreditAmount != null) {
-            pricings = pricings.stream()
-                    .filter(p -> p.getCreditAmount() >= minCreditAmount)
-                    .toList();
-        }
-        if (maxCreditAmount != null) {
-            pricings = pricings.stream()
-                    .filter(p -> p.getCreditAmount() <= maxCreditAmount)
-                    .toList();
-        }
-        if (isActive != null) {
-            pricings = pricings.stream()
-                    .filter(p -> p.getIsActive().equals(isActive))
-                    .toList();
-        }
-        
-        // Apply sorting
-        pricings = switch (sortBy.toLowerCase()) {
-            case "name" -> sortDir.equalsIgnoreCase("desc") 
-                    ? pricings.stream().sorted((a, b) -> b.getName().compareToIgnoreCase(a.getName())).toList()
-                    : pricings.stream().sorted((a, b) -> a.getName().compareToIgnoreCase(b.getName())).toList();
-            case "price" -> sortDir.equalsIgnoreCase("desc")
-                    ? pricings.stream().sorted((a, b) -> b.getPrice().compareTo(a.getPrice())).toList()
-                    : pricings.stream().sorted((a, b) -> a.getPrice().compareTo(b.getPrice())).toList();
-            case "creditamount" -> sortDir.equalsIgnoreCase("desc")
-                    ? pricings.stream().sorted((a, b) -> b.getCreditAmount().compareTo(a.getCreditAmount())).toList()
-                    : pricings.stream().sorted((a, b) -> a.getCreditAmount().compareTo(b.getCreditAmount())).toList();
-            case "isactive" -> sortDir.equalsIgnoreCase("desc")
-                    ? pricings.stream().sorted((a, b) -> b.getIsActive().compareTo(a.getIsActive())).toList()
-                    : pricings.stream().sorted((a, b) -> a.getIsActive().compareTo(b.getIsActive())).toList();
-            default -> sortDir.equalsIgnoreCase("desc")
-                    ? pricings.stream().sorted((a, b) -> b.getId().compareTo(a.getId())).toList()
-                    : pricings.stream().sorted((a, b) -> a.getId().compareTo(b.getId())).toList();
-        };
-        
-        return pricings;
-    }
-
-    @Override
-    public PackagePricingResponse togglePackageStatus(Integer id) {
-        log.info("Toggling status for package pricing with id: {}", id);
-        
-        PackagePricing packagePricing = packagePricingRepository.findById(id)
-                .orElseThrow(() -> new RuntimeException("Package pricing not found with id: " + id));
-
-        packagePricing.setActive(!packagePricing.isActive());
-        
-        PackagePricing updatedPackagePricing = packagePricingRepository.save(packagePricing);
-        log.info("Successfully toggled status for package pricing with id: {}, new status: {}", 
-                updatedPackagePricing.getId(), updatedPackagePricing.isActive());
-        
-        return convertToResponse(updatedPackagePricing);
     }
 
     private PackagePricingResponse convertToResponse(PackagePricing packagePricing) {
